plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.itwillbs'
version = '0.0.1-SNAPSHOT'
description = 'ilkwangTech'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
	implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 보안설정
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // 타임리프
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.4.0'

    // 데이터베이스 클라이언트
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

    // 스프링 데이터 JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 롬복
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    
    // 서버 자동 로드
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 서로 다른 클래스(객체) 간의 변환을 지원해주는 ModelMapper 라이브러리
    implementation 'org.modelmapper:modelmapper:3.2.6'
    
    implementation 'org.json:json:20231013'
    
    // 웹소켓
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("-parameters")
}
